# type-spy

./: README.md  parse_stdlib.py  pyproject.toml
type_spy/: __about__.py  __init__.py  gen_sigs.py  parse_stubs.py  types.py
