[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "type-spy"
description = 'Searches for python functions by there signature.'
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = []
authors = [
  { name = "Zomatree", email = "me@zomatree.live" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "lark"
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/unknown/type-spy#readme"
Issues = "https://github.com/unknown/type-spy/issues"
Source = "https://github.com/unknown/type-spy"

[tool.hatch.version]
path = "type_spy/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=type_spy --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "type_spy/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
